codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"Ask anything... "Fix a TODO in the codebase"                                    "
"Analyzing (0s • esc to interrupt)                                               "
