codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_waiting_multiple_empty_after.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
assertion_line: 556
expression: combined
---
• Waited for background terminal · just fix

gpt-5.6-sol default · 0s
